--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,6 +60,10 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            datetime_functions:
+                DATE_FORMAT:
+                    AppBundle\DQL\DateFormatFunction
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -73,3 +77,14 @@ swiftmailer:
 #    spool: { type: memory}
 #	enabled: false
 #	{ type: memory }
+
+knp_snappy:
+    temporary_folder: '%kernel.cache_dir%/snappy/'
+    pdf:
+        enabled: true
+        binary: /usr/bin/wkhtmltopdf
+        options: []
+    image:
+        enabled: true
+        binary: /usr/bin/wkhtmltoimage
+        options: []
